# s3dt-semantic-drift-detection

./: CITATION.cff  LICENSE  README.md  __init__.py  artifact_overview.md  case_study_anthropic_2025.md  cli.py  detection.py  download  events.json  graph.py  methodology.md  models.py  paper_drift_scores.json  paper_reference_scores.csv  paper_reference_scores.json  projection.py  pyproject.toml  reproducibility.md  requirements.txt  run_pipeline.py  summary.md
