[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3dt-semantic-drift-detection"
version = "0.1.0"
description = "S3DT: Secure Semantic Soundness for Digital Threads — detecting semantic drift in digital threads with LLM-assisted analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Anonymous", email = "artifact@example.com" }
]

license = { text = "MIT" }

keywords = [
  "semantic-integrity",
  "digital-threads",
  "semantic-drift",
  "security",
  "ai-systems",
  "software-supply-chain"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Security"
]

dependencies = [
  "networkx>=3.2",
  "pydantic>=2.6",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "sentence-transformers>=2.6",
  "transformers>=4.40",
  "torch>=2.2",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "typer>=0.12",
  "rich>=13.7"
]

[project.urls]
Homepage = "https://github.com/KaavyaRekanar/s3dt-semantic-drift-detection"
Repository = "https://github.com/KaavyaRekanar/s3dt-semantic-drift-detection"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
s3dt-run-pipeline = "s3dt.cli:run_pipeline"
s3dt-run-case-study = "s3dt.cli:run_case_study"
